--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,16 @@ livekit-plugins-turn-detector>=0.4.3,<1.0.0
 # optional, only if background voice & noise cancellation is needed
 livekit-plugins-noise-cancellation>=0.2.0,<1.0.0
 python-dotenv~=1.0
+# package for downloader
+python-magic==0.4.27
+bs4==0.0.2
+janome
+pyspellchecker==0.8.1
+playwright
+Flask==3.0.3
+crochet==2.1.1
+aiohttp
+llama-index
+typing
+lxml
+argparse
